fix(SignMessage): broken layout

--- a/src/components/SignMessage/SignMessage.scss
+++ b/src/components/SignMessage/SignMessage.scss
@@ -86,17 +86,28 @@ $max-width: 900px;
   .actions {
     form {
       display: flex;
+      flex-direction: column;
 
-      button {
-        flex: 1 1 50%;
-        background-color: rgb(128, 255, 219);
-        margin: 0em 2.5% 0em 2.5%;
-        text-transform: uppercase;
-        font-weight: 800;
-        min-height: 75px;
-        font-size: 1em;
-        vertical-align: middle;
-        position: relative;
+      .buttons {
+        display: flex;
+
+        button {
+          flex: 1 1 50%;
+          background-color: rgb(128, 255, 219);
+          margin: 0em 2.5% 0em 2.5%;
+          text-transform: uppercase;
+          font-weight: 800;
+          min-height: 75px;
+          font-size: 1em;
+          vertical-align: middle;
+          position: relative;
+
+          &.reject {
+            border: 3px solid rgb(255, 132, 128);
+            background: transparent;
+            color: rgb(255, 132, 128);
+          }
+        }
       }
 
       input {
@@ -106,11 +117,7 @@ $max-width: 900px;
         margin-bottom: 20px;
       }
 
-      .reject {
-        border: 3px solid rgb(255, 132, 128);
-        background: transparent;
-        color: rgb(255, 132, 128);
-      }
+      
 
       .icon {
         position: absolute;
